[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://grass.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/Level.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/Coin.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/Hit.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Powerup.wav" type="AudioStream" id=9]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Cactus.tscn" type="PackedScene" id=11]

[node name="Main" type="Node"]
script = ExtResource( 3 )
Coin = ExtResource( 4 )
Powerup = ExtResource( 10 )
Obstacle = ExtResource( 11 )
playtime = 30

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CoinContainer" type="Node" parent="."]

[node name="ObstacleContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LeveLSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupContainer" type="Node" parent="."]

[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
